# gestao-torres

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  Makefile  README.md  aa.html  alembic.ini  docker-compose.override.yml  docker-compose.yml  nodemon.json  package.json  pnpm-lock.yaml  pyproject.toml  raw_location.txt
scripts/: create_superuser.py  dev.py  seed_db.py  seed_pagination.py
src/: app.py
src/alembic/: env.py
src/alembic/versions/: 198ee27d52c4_terreno_update.py  2d8080c213d1_data_final_null.py  81477f77441a_contratos.py
src/core/: api.py  database-old.py  database.py  geocode.py  log.py  schema.py  security.py  service.py  settings.py  templates.py
src/core/middleware/: no_cache.py
src/core/notifier/: __init__.py  app.py  notifier.py
src/core/utils/: files.py  htmx.py  jinja.py  ldap.py  loader.py
src/migrations/: env.py
src/migrations_old/versions/: 9dea87e14666_update_contrato_and_add_altura_model.py  c2f750849467_contratos.py
src/models/: __init__.py  base.py  clientes.py  contrato.py  contratos.py  terreno.py  torre.py  user.py
src/routes/api/: auth.py  router.py  user.py
src/routes/htmx/: address.py  navigation.py  router.py  user.py
src/routes/pages/: clientes.py  contratos.py  core.py  despesas.py  home.py  router.py  torres.py  (+2 more)
src/schemas/: auth.py  clientes.py  contrato.py  despesa.py  terreno.py  torre.py  user.py
src/services/: auth.py  clientes.py  contrato.py  contratos.py  despesa.py  terreno.py  torre.py  user.py
src/templates/: base.html  form page example  home.html  login.html  template-a.html  template.html
(+71 files in other folders)
